Fix: Header Bar Always Visible.

--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,11 @@ ul {
     /* position: sticky; */
 }
 
+.main-header {
+    position: sticky;
+    top: 0;
+}
+
 ul li {
     float: left;
     padding-top: 10px;
